// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpenseSumary with 1 expense 1`] = `
<div>
  <h1>
    viewing 
    1
     
    expense
     totalling 
    $1.95
  </h1>
</div>
`;

exports[`should correctly render ExpenseSumary with all 3 expenses 1`] = `
<div>
  <h1>
    viewing 
    3
     
    expenses
     totalling 
    $1,141.95
  </h1>
</div>
`;
